<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name_ku">PrimaryDialer</string>
    <string name="phoneAppLabel" product="default">Phone</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="select_phone_account_for_calls">Call with</string>
    <string name="facebook_app_id">2232774193418324</string>
    <string name="dialpad_star_number">*</string>
    <string name="dialpad_pound_number">#</string>
    <string name="dialpad_0_letters">+</string>
    <string name="dialpad_1_letters"></string>
    <string name="dialpad_2_letters">ABC</string>
    <string name="dialpad_3_letters">DEF</string>
    <string name="dialpad_4_letters">GHI</string>
    <string name="dialpad_5_letters">JKL</string>
    <string name="dialpad_6_letters">MNO</string>
    <string name="dialpad_7_letters">PQRS</string>
    <string name="dialpad_8_letters">TUV</string>
    <string name="dialpad_9_letters">WXYZ</string>
    <string name="dialpad_star_letters"></string>
    <string name="dialpad_pound_letters"></string>
    <string name="description_dialpad_back">Navigate back</string>
    <string name="description_dialpad_overflow">More options</string>
    <string name="description_delete_button">backspace</string>
    <string name="description_image_button_plus">plus</string>
    <string name="description_voicemail_button">voicemail</string>
    <string name="callFailed_simError">No SIM or SIM error</string>
    <string name="ringtone_silent">None</string>
    <string name="ringtone_unknown">Unknown ringtone</string>
    <string name="onHold">On hold</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Payphone</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="wait_prompt_str">Send the following tones?\n</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="card_title_dialing">Dialing</string>
    <string name="card_title_redialing">Redialing</string>
    <string name="card_title_conf_call">Conference call</string>
    <string name="card_title_incoming_call">Incoming call</string>
    <string name="card_title_call_ended">Call ended</string>
    <string name="card_title_on_hold">On hold</string>
    <string name="card_title_hanging_up">Hanging up</string>
    <string name="card_title_in_call">In call</string>
    <string name="card_title_video_call">Video call</string>
    <string name="card_title_video_call_requesting">Requesting video</string>
    <string name="card_title_video_call_error">Can\'t connect video call</string>
    <string name="card_title_video_call_rejected">Video request rejected</string>
    <string name="card_title_callback_number">Your callback number\n
        <xliff:g id="dark_number">%1$s</xliff:g>
    </string>
    <string name="card_title_callback_number_emergency">Your emergency callback number\n
        <xliff:g id="dark_number">%1$s</xliff:g>
    </string>
    <string name="notification_dialing">Dialing</string>
    <string name="notification_ongoing_call">Ongoing call</string>
    <string name="notification_ongoing_call_wifi">Ongoing Wi-Fi call</string>
    <string name="notification_on_hold">On hold</string>
    <string name="notification_incoming_call">Incoming call</string>
    <string name="notification_incoming_call_wifi">Incoming Wi-Fi call</string>
    <string name="notification_incoming_video_call">Incoming video call</string>
    <string name="notification_requesting_video_call">Incoming video request</string>
    <string name="notification_action_answer">Answer</string>
    <string name="notification_action_end_call">Hang up</string>
    <string name="notification_action_answer_video">Video</string>
    <string name="notification_action_answer_voice">Voice</string>
    <string name="notification_action_accept">Accept</string>
    <string name="notification_action_dismiss">Dismiss</string>
    <string name="incall_error_supp_service_unknown">Service not supported.</string>
    <string name="incall_call_type_label_sip">SIP call</string>
    <string name="onscreenHoldText_unselected">Hold Call</string>
    <string name="onscreenHoldText_selected">Resume Call</string>
    <string name="onscreenEndCallText">End Call</string>
    <string name="onscreenShowDialpadText">Dialpad</string>
    <string name="onscreenMuteText">Mute</string>
    <string name="onscreenAddCallText">Add call</string>
    <string name="onscreenMergeCallsText">Merge calls</string>
    <string name="onscreenSwapCallsText">Swap</string>
    <string name="onscreenManageConferenceText">Manage conference call</string>
    <string name="onscreenVideoCallText">Video call</string>
    <string name="onscreenSwitchCameraText">Switch camera</string>
    <string name="onscreenPauseVideoText">Pause video</string>
    <string name="onscreenOverflowText">More options</string>
    <string name="service_label">MViCall</string>
    <string name="image_change_explanaton">The Image bellow will change when a Notification is intercepted</string>
    <string name="notification_logo">Intercepted Notification Logo</string>
    <string name="notification_listener_service">Notification Service</string>
    <string name="notification_listener_service_explanation">For the app. to work you need to enable the Notification Service. Enable it now?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string-array name="absent_num" translatable="false">
        <item>ABSENT NUMBER</item>
        <item>ABSENTNUMBER</item>
    </string-array>
    <string name="calling_via_template">Calling via <xliff:g id="provider_name">%s</xliff:g></string>
    <string name="incoming_via_template">Incoming via <xliff:g id="provider_name">%s</xliff:g></string>
    <string name="goPrivate">go private</string>
    <string name="respond_via_sms_custom_message">Write your own...</string>
    <string name="custom_message_cancel">Cancel</string>
    <string name="custom_message_send">Send</string>
    <string name="description_target_answer">Answer</string>
    <string name="description_target_send_sms">Send SMS</string>
    <string name="description_target_decline">Decline</string>
    <string name="description_target_answer_video_call">Answer as video call</string>
    <string name="description_target_answer_audio_call">Answer as audio call</string>
    <string name="description_target_accept_upgrade_to_video_request">Accept video request</string>
    <string name="description_target_decline_upgrade_to_video_request">Decline video request</string>
    <string name="description_direction_up">Slide up for <xliff:g example="Unlock" id="target_description">%s</xliff:g>.</string>
    <string name="description_direction_left">"Slide left for <xliff:g example="Unlock" id="target_description">%s</xliff:g>.</string>
    <string name="description_direction_right">Slide right for <xliff:g example="Unlock" id="target_description">%s</xliff:g>.</string>
    <string name="description_direction_down">Slide down for <xliff:g example="Unlock" id="target_description">%s</xliff:g>.</string>
    <string name="default_notification_description">Default sound (<xliff:g id="default_sound_title">%1$s</xliff:g>)</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="emergency_call_dialog_number_for_display">Emergency number</string>
    <plurals name="duration_seconds">
        <item quantity="one">1 second</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> seconds</item>
    </plurals>
    <plurals name="duration_minutes">
        <item quantity="one">1 minute</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> minutes</item>
    </plurals>
    <plurals name="duration_hours">
        <item quantity="one">1 hour</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> hours</item>
    </plurals>
    <string name="profile_photo_description">Profile photo</string>
    <string name="camera_off_description">Camera off</string>
    <string name="child_number">via <xliff:g example="650-555-1212" id="child_number">%s</xliff:g></string>
    <string name="title_home">Home</string>
    <string name="title_marketplace">Market</string>
    <string name="title_friend">Teman</string>
    <string name="title_reward">Reward</string>
</resources>