<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_margin="0dp"
    android:animateLayoutChanges="true"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/audioButton"
            style="@style/InCallCompoundButton"
            android:background="@drawable/btn_compound_audio"
            android:contentDescription="@string/audio_mode_speaker" />

        <ToggleButton
            android:id="@+id/muteButton"
            style="@style/InCallCompoundButton"
            android:background="@drawable/btn_compound_mute"
            android:contentDescription="@string/onscreenMuteText" />

        <ToggleButton
            android:id="@+id/dialpadButton"
            style="@style/InCallCompoundButton"
            android:background="@drawable/btn_compound_dialpad"
            android:contentDescription="@string/onscreenShowDialpadText" />

        <ToggleButton
            android:id="@+id/holdButton"
            style="@style/InCallCompoundButton"
            android:background="@drawable/btn_compound_hold"
            android:contentDescription="@string/onscreenHoldText_unselected" />

        <ImageButton
            android:id="@+id/swapButton"
            style="@style/InCallButton"
            android:background="@drawable/btn_swap"
            android:contentDescription="@string/onscreenSwapCallsText"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/changeToVideoButton"
            style="@style/InCallButton"
            android:background="@drawable/btn_change_to_video"
            android:contentDescription="@string/onscreenVideoCallText"
            android:visibility="gone" />

        <ToggleButton
            android:id="@+id/switchCameraButton"
            style="@style/InCallCompoundButton"
            android:background="@drawable/btn_compound_video_switch"
            android:contentDescription="@string/onscreenSwitchCameraText"
            android:visibility="gone" />

        <ToggleButton
            android:id="@+id/pauseVideoButton"
            style="@style/InCallCompoundButton"
            android:background="@drawable/btn_compound_video_off"
            android:contentDescription="@string/onscreenPauseVideoText"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/addButton"
            style="@style/InCallButton"
            android:background="@drawable/btn_add"
            android:contentDescription="@string/onscreenAddCallText"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/mergeButton"
            style="@style/InCallButton"
            android:background="@drawable/btn_merge"
            android:contentDescription="@string/onscreenMergeCallsText"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/overflowButton"
            style="@style/InCallButton"
            android:background="@drawable/btn_overflow"
            android:contentDescription="@string/onscreenOverflowText"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/manageVideoCallConferenceButton"
            style="@style/InCallButton"
            android:background="@drawable/ic_group_white_24dp"
            android:contentDescription="@string/onscreenManageConferenceText"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>
