<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/marketplaceFragment"
        android:title="@string/title_marketplace"
        android:icon="@drawable/ic_marketplace_"/>

    <item
        android:enabled="false"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/friendFragment"
        android:icon="@drawable/ic_friends"
        android:title="@string/title_friend" />

    <item
        android:id="@+id/rewardFragment"
        android:icon="@drawable/ic_reward"
        android:title="@string/title_reward" />
</menu>